tests/typecheck/should_fail/UnliftedNewtypesMismatchedKindRecord.stderr

UnliftedNewtypesMismatchedKindRecord.hs:11:23: error: [GHC-83865]
    • Expected an IntRep type, but ‘Word#’ is a WordRep type
    • In the type ‘Word#’
      In the definition of data constructor ‘FooC’
      In the newtype declaration for ‘Foo’
